--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.455.0",
     "next": "15.0.2",
     "nookies": "^2.5.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "19.0.0-rc-02c0e824-20241028",  
+    "react-dom": "19.0.0-rc-02c0e824-20241028", 
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -27,12 +27,22 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18",  
+    "@types/react-dom": "^18",  
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "19.0.0-rc-02c0e824-20241028",  
+    "react-dom": "19.0.0-rc-02c0e824-20241028", 
+    "react-hook-form": {
+      "react": "19.0.0-rc-02c0e824-20241028"
+    },
+    "@hookform/resolvers": {
+      "react": "19.0.0-rc-02c0e824-20241028"  
+    }
   }
 }
