--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^4.7.8",
     "lucide-react": "^0.455.0",
     "next": "15.0.2",
+    "next-intl": "^3.26.3",
     "node-appwrite": "^14.1.0",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-02c0e824-20241028",
